[impl] Add swift build and test to travis description file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ osx_image: xcode8.2
 
 script:
   - xcodebuild test -project Project/FoundationTools.xcodeproj -scheme FoundationTools
+  - swift build
+  - swift test
 
 notifications:
 email: true
